--- a/.posthtmlrc
+++ b/.posthtmlrc
@@ -10,7 +10,7 @@
         "body": [
           {
             "type": "text",
-            "value": "Coming to Columbia’s campus for the first time—or even the seventh—can be overwhelming. Getting lost as you head to class is common, but it can often feel like everyone else knows exactly what’s going on when every day seems different for you. While learning where all your classes are is something that will simply take time and practice, Spectrum has you covered with understanding Columbia’s sometimes convoluted calendar."
+            "value": "With so many events, breaks, and deadlines packed into a single semester, it’s easy to lose track of your own schedule, let alone the key dates on Columbia’s academic calendar. As you settle into classes, Spectrum has broken down the important academic dates and activities for the spring 2025 semester to ensure you won’t miss anything important."
           },
           {
             "type": "graphic",
@@ -20,11 +20,11 @@
           },
           {
             "type": "text",
-            "value": "Trying to take in all these dates can be overwhelming. Remember to take it day by day, and that there are many things—such as the plentiful breaks throughout the fall semester—to look forward to."
+            "value": "We hope this calendar proves helpful and you have a successful start to the semester!"
           },
           {
             "type": "text",
-            "value": "<i>Spectrum Editor Manuela Moreyra</i><i> can be contacted at </i><a href=\"mailto:manuela.moreyra@columbiaspectator.com\"><i>manuela.moreyra@columbiaspectator.com</i></a><i>. Follow Spectrum on </i><a href=\"https://www.instagram.com/cuspectrum/\"><i>X</i></a><i> </i><a href=\"https://twitter.com/cuspectrum?lang=en\"><i>@CUSpectrum</i></a><i>. </i>"
+            "value": "<i>Spectrum Editor Manuela Moreyra</i><i> can be contacted at </i><a href=\"mailto:manuela.moreyra@columbiaspectator.com\"><i>manuela.moreyra@columbiaspectator.com</i></a><i>.</i><i> While writing this article Manuela felt an impending sense of doom when she realized she will have to declare her major at some point in the semester. Follow Spectrum on </i><a href=\"https://www.instagram.com/cuspectrum/\"><i>X</i></a><i> </i><a href=\"https://twitter.com/cuspectrum?lang=en\"><i>@CUSpectrum</i></a><i>. </i>"
           },
           {
             "type": "text",
@@ -35,11 +35,11 @@
             "value": "<b><i>Want to keep up with breaking news? Subscribe to our </i></b><a href=\"https://columbiaspectator.us4.list-manage.com/subscribe?u=a3d2eeb1ae5560ca04f82f042&id=e51c51d62d\"><b><i>email newsletter </i></b></a><b><i>and like Spectator on </i></b><a href=\"https://www.facebook.com/columbiaspectator\"><b><i>Facebook</i></b></a><b><i>. </i></b>"
           }
         ],
-        "headline": "Fall 2024: A breakdown and academic timeline",
-        "date": "August 22, 2024",
+        "headline": "Spring 2025: Breaking down the academic timeline",
+        "date": "January 22, 2025",
         "byline": "By <a href=\"https://www.columbiaspectator.com/contributors/manuela-moreyra/\">Manuela Moreyra</a>",
         "byline2": "Graphic by <a href=\"https://www.columbiaspectator.com/contributors/molly-durawa/\">Molly Durawa</a>",
-        "byline3": "Illustrations by ILLUSTRATOR??",
+        "byline3": "Illustrations by Saumya Chaudhry",
         "USE_NEWS_NAV": true,
         "USE_EYE_NAV": false,
         "USE_COVER_HED": false,
