--- a/.posthtmlrc
+++ b/.posthtmlrc
@@ -10,7 +10,7 @@
         "body": [
           {
             "type": "text",
-            "value": "With so many events, breaks, and deadlines packed into a single semester, it’s easy to lose track of your own schedule, let alone the key dates on Columbia’s academic calendar. As you settle into classes, Spectrum has broken down the important academic dates and activities for the spring 2025 semester to ensure you won’t miss anything important."
+            "value": "With so many events, breaks, and deadlines packed into a single semester, it’s difficult to keep track of your own schedule, let alone key dates on Columbia’s academic calendar. As you settle into classes, Spectrum has broken down the important academic dates and events for the spring 2025 semester to ensure you won’t miss anything important."
           },
           {
             "type": "graphic",
@@ -35,8 +35,8 @@
             "value": "<b><i>Want to keep up with breaking news? Subscribe to our </i></b><a href=\"https://columbiaspectator.us4.list-manage.com/subscribe?u=a3d2eeb1ae5560ca04f82f042&id=e51c51d62d\"><b><i>email newsletter </i></b></a><b><i>and like Spectator on </i></b><a href=\"https://www.facebook.com/columbiaspectator\"><b><i>Facebook</i></b></a><b><i>. </i></b>"
           }
         ],
-        "headline": "Spring 2025: Breaking down the academic timeline",
-        "date": "January 22, 2025",
+        "headline": "Spring 2025: breaking down the academic timeline",
+        "date": "January 23, 2025",
         "byline": "By <a href=\"https://www.columbiaspectator.com/contributors/manuela-moreyra/\">Manuela Moreyra</a>",
         "byline2": "Graphic by <a href=\"https://www.columbiaspectator.com/contributors/molly-durawa/\">Molly Durawa</a>",
         "byline3": "Illustrations by Saumya Chaudhry",
